--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Farheen's Marriage Consultancy</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="light">
 
@@ -12,39 +13,24 @@
         <nav class="navbar">
             <div class="logo">Farheen's Marriage Consultancy</div>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#packages">Packages</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="packages.html">Packages</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-
             <button id="modeToggle">Mode</button>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Helping You Find the Right Match</h1>
-        <p>Confidential, personalised, and trusted matchmaking services</p>
-    </section>
-
-    <section id="about" class="section">
-        <h2>About</h2>
-        <p>Farheen's Marriage Consultancy provides professional desi matchmaking with complete privacy, respect, and personalised care. We help families and individuals find meaningful matches based on values, compatibility, and culture.</p>
-    </section>
-
-    <section id="packages" class="section">
-        <h2>Packages</h2>
-        <p>Add details for Basic, Premium, and Exclusive matchmaking plans. You can also include special services like profile creation or rishta verification.</p>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>WhatsApp, phone numbers, and email can be added here. A contact form can be added later if you want.</p>
+        <div class="hero-overlay">
+            <h1>Helping You Find the Perfect Match</h1>
+            <p>Elegant, personalised, and trusted matchmaking services</p>
+        </div>
     </section>
 
     <script>
         const toggle = document.getElementById("modeToggle")
         const body = document.body
-
         toggle.addEventListener("click", () => {
             if (body.classList.contains("light")) {
                 body.classList.remove("light")
@@ -55,6 +41,5 @@
             }
         })
     </script>
-
 </body>
 </html>
