--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <h1>Find Your Perfect Match</h1>
   <p class="tagline"><span id="changingText">Elegant Connections</span></p>
   <div class="hero-tags">
-    <span>Free Sessions</span>
-    <span>Student Friendly</span>
-    <span>Planned 2026</span>
+    <span>Religious</span>
+    <span>Valuable</span>
+    <span>Family-friendly</span>
   </div>
 </section>
 
@@ -93,7 +93,7 @@ toggle.addEventListener("click", () => {
 });
 
 // rotating tagline
-const phrases = ["Elegant Connections","Trusted Guidance","Perfect Matches"];
+const phrases = ["Elegant Connections","Trusted Guidance","Compatible Partners"];
 let index = 0;
 const textEl = document.getElementById("changingText");
 setInterval(() => {
