--- a/packages.html
+++ b/packages.html
@@ -23,21 +23,16 @@
 
 <section class="packages-section">
   <h2>Our Packages</h2>
+
   <div class="package-cards">
     <div class="card scroll-left">
-      <h3>Basic</h3>
-      <p>Simple matchmaking assistance with profile guidance.</p>
-      <p class="price">PKR 5,000</p>
+      <h3>Registration Fee</h3>
+      <p>PKR 30,000 – Covers registration, profile setup, and initial matchmaking assistance. This fee is renewed every year and may be subject to changes.</p>
     </div>
+
     <div class="card scroll-right">
-      <h3>Premium</h3>
-      <p>Full matchmaking, profile verification, and personalized support.</p>
-      <p class="price">PKR 10,000</p>
-    </div>
-    <div class="card scroll-left">
-      <h3>Exclusive</h3>
-      <p>All Premium features plus VIP consultation and featured promotion.</p>
-      <p class="price">PKR 15,000</p>
+      <h3>Final Match Fee</h3>
+      <p>PKR 100,000 – Payable once a successful match has been made. Includes all personalized support, final consultations, and continued guidance until the match is finalized.</p>
     </div>
   </div>
 </section>
