--- a/about.html
+++ b/about.html
@@ -38,20 +38,8 @@
   <p>&copy; 2025 All Rights Reserved</p>
 </footer>
 
-<script>
-// Dark/light mode toggle
-const toggle = document.getElementById("modeToggle");
-const body = document.body;
-toggle.addEventListener("click", () => {
-  if(body.classList.contains("light")){
-    body.classList.replace("light","dark");
-    toggle.textContent = "🌙";
-  } else {
-    body.classList.replace("dark","light");
-    toggle.textContent = "🌞";
-  }
-});
-</script>
+
+<script src="script.js"></script>
 
 </body>
 </html>
