--- a/contact.html
+++ b/contact.html
@@ -36,21 +36,9 @@
   <p>Trusted family matchmaking based in Pakistan</p>
   <p>&copy; 2025 All Rights Reserved</p>
 </footer>
+<script src="script.js"></script>
 
-<script>
-// Dark/light mode toggle
-const toggle = document.getElementById("modeToggle");
-const body = document.body;
-toggle.addEventListener("click", () => {
-  if(body.classList.contains("light")){
-    body.classList.replace("light","dark");
-    toggle.textContent = "🌙";
-  } else {
-    body.classList.replace("dark","light");
-    toggle.textContent = "🌞";
-  }
-});
-</script>
+
 
 </body>
 </html>
