--- a/index.html
+++ b/index.html
@@ -78,39 +78,8 @@
   <p>&copy; 2025 All Rights Reserved</p>
 </footer>
 
-<script>
-// dark/light mode toggle
-const toggle = document.getElementById("modeToggle");
-const body = document.body;
-toggle.addEventListener("click", () => {
-  if(body.classList.contains("light")){
-    body.classList.replace("light","dark");
-    toggle.textContent = "🌙";
-  } else {
-    body.classList.replace("dark","light");
-    toggle.textContent = "🌞";
-  }
-});
+<script src="script.js"></script>
 
-// rotating tagline
-const phrases = ["Elegant Connections","Trusted Guidance","Compatible Partners"];
-let index = 0;
-const textEl = document.getElementById("changingText");
-setInterval(() => {
-  index = (index+1) % phrases.length;
-  textEl.textContent = phrases[index];
-}, 2500);
-
-// scroll animations
-const scrollElements = document.querySelectorAll('.scroll-left, .scroll-right, .step');
-const elementInView = (el, offset=100) => el.getBoundingClientRect().top <= window.innerHeight - offset;
-const displayScrollElement = (el) => el.classList.add('show');
-const handleScrollAnimation = () => {
-  scrollElements.forEach(el => { if(elementInView(el,150)) displayScrollElement(el); });
-};
-window.addEventListener('scroll', handleScrollAnimation);
-handleScrollAnimation();
-</script>
 
 </body>
 </html>
